--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body, input, button, input::placeholder {
 	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
-html.dark, html.light {
+:root {
 	--shadow-dark:0 6px 10px rgba(40,40,40,0.25);
 	--shadow-darker:0 6px 10px rgba(40,40,40,0.4);
 	--shadow-smooth:0 1px 1px rgba(0,0,0,0.08), 0 2px 2px rgba(0,0,0,0.05), 0 4px 4px rgba(0,0,0,0.06), 0 8px 8px rgba(0,0,0,0.1);
