--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,6 +87,12 @@ a:hover {
 	cursor: pointer;
 }
 
+.buttonNoStyles {
+	background: none;
+	border: none;
+	outline: none;
+}
+
 ::-webkit-scrollbar, div::-webkit-scrollbar {
 	display:block;
 	width:4px;
@@ -145,33 +151,11 @@ input[type=number] {
 	display:block;
 	position:absolute;
 }
-
-.popup-wrapper {
-	position:absolute;
-	width:400px;
-	height:400px;
-	left:calc(50% - 400px / 2);
-	top:calc(50% - 400px / 2);
-	background:var(--main-first);
-	z-index:98;
-	overflow:hidden;
-	transition:opacity 0.25s;
-	opacity:0;
-	border-radius:var(--border-radius);
-	box-shadow:var(--shadow-smooth);
-	display:none;
-}
-.popup-wrapper.active {
-	display:block;
-}
 .popup-wrapper .top, .popup-wrapper .bottom {
-	position:absolute;
-	left:0;
 	width:100%;
 }
 .popup-wrapper .top {
 	z-index:4;
-	top:0;
 	height:40px;
 	background:var(--main-third-transparent);
 	box-shadow:var(--shadow-smooth);
