--- a/styles/globals.css
+++ b/styles/globals.css
@@ -196,6 +196,7 @@ input[type=number] {
 	-webkit-overflow-scrolling:touch;
 	scroll-behavior:smooth;
 	text-align:center;
+	background: black;
 }
 .popup-wrapper .bottom input {
 	display:block;
