--- a/styles/section.css
+++ b/styles/section.css
@@ -23,7 +23,7 @@
 
 .tearsheet-grid {
     display: grid !important;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
 }
 
 .tearsheet-grid-item {
@@ -32,6 +32,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 10px;
+    margin-top: 5px;
 }
 
 .card-deck {
