worked on frontend of kanban board

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1586,17 +1586,6 @@ td {
   transition-duration: 0.5s;
 }
 
-.delete-hover-button {
-  background-color: red;
-  color: white;
-  margin-left: 10px;
-}
-
-.delete-hover-button:hover {
-  background-color: rgb(255, 127, 127);
-  transition-duration: 0.5s;
-}
-
 .lane-subtitle {
   background-color: #414BB2;
   font-size: 40px;
@@ -1664,6 +1653,7 @@ td {
 
 .custom-lane-header {
   border-radius: 10px;
+  
 }
 
 .add-button {
@@ -1684,4 +1674,9 @@ td {
   padding: 4px;
   margin: 8px;
   transition-duration: 0.5;
+}
+
+.myAssets {
+  background-color: gray;
+  opacity: 0.5;
 }
