--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1587,7 +1587,7 @@ td {
 }
 
 .lane-subtitle {
-  background-color: #414BB2;
+  background: var(--purple-gradient);
   font-size: 40px;
   color: white;
   margin: 10px;
@@ -1676,7 +1676,9 @@ td {
   transition-duration: 0.5;
 }
 
-.myAssets {
-  background-color: gray;
-  opacity: 0.8;
+.rectangle {
+  width: "100%";
+  height: "0%";
+  background-color: darkgrey;
+  opacity: 0.4
 }
