--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1651,19 +1651,15 @@ td {
   transform: scale(0.5);
   background-color: #12CDD4;
   color: white;
-  margin: 10px;
+  margin: 9px;
   padding: 2px;
-  border-radius: 500px;
+  border-radius: 100%;
   transition-duration: 0.5;
 }
 
 .add-button:hover {
-  color: white;
-  background-color: #12CDD4;
-  box-shadow: #202231;
-  padding: 4px;
-  margin: 8px;
-  transition-duration: 0.5;
+  color: #12CDD4;
+  background-color: white;
 }
 
 .rectangle {
