--- a/styles/globals.css
+++ b/styles/globals.css
@@ -194,6 +194,7 @@ input[type="number"] {
 .popup-wrapper .top,
 .popup-wrapper .bottom {
   width: 100%;
+  border: 4px solid #9454F4;
 }
 
 .popup-wrapper .top {
@@ -202,9 +203,8 @@ input[type="number"] {
   width: 100%;
   background: var(--main-third-transparent);
   box-shadow: var(--shadow-smooth);
-  border: 4px solid #30CCF6;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   border-bottom: 0;
 }
 
@@ -221,7 +221,7 @@ input[type="number"] {
   height: 28px;
   padding: 0;
   top: 6px;
-  right: 6px;
+  right: 1px;
   cursor: pointer;
   border-radius: 50%;
   background: var(--main-first);
@@ -248,9 +248,8 @@ input[type="number"] {
   scroll-behavior: smooth;
   text-align: center;
   background: black;
-  border: 4px solid #30CCF6;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
   border-top: 0;
 }
 
