--- a/styles/globals.css
+++ b/styles/globals.css
@@ -247,7 +247,7 @@ input[type="number"] {
   -webkit-overflow-scrolling: touch;
   scroll-behavior: smooth;
   text-align: center;
-  background: rgba(32, 34, 50, 0.8);
+  background: rgba(32, 34, 50, 0.95);
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   border-top: 0;
@@ -1856,17 +1856,14 @@ td {
 }
 
 .progress {
-  border-color: black;
-  border-style: solid;
-  border-width: 5px;
-  border-radius: 10px;
-  color: black;
-  background-color: transparent;
-  margin: 5px;
-  padding: 7px;
-  width: 50px;
-  height: 50px;
-  size: 10px;
-  align-content: center;
-  transform: scale(0.5);  
+  margin-bottom: -5px;
+  border: 3px solid black;
+  border-radius: 5px;
+  width: 90px;
+}
+
+.progress > p {
+  margin-bottom: 1px;
+  margin-left: 2px;
+  margin-top: -0.5px;
 }
