--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1776,7 +1776,7 @@ td {
 }
 
 .react-trello-lane {
-  width: 25%;
+  width: 19%;
   text-wrap: true;
 }
 
@@ -1785,7 +1785,6 @@ td {
   border: 4px solid white;
   position: relative;
   padding: 10px;
-  width: 400px;
   cursor: pointer;
   text-wrap: wrap;
   margin: 5px;
@@ -1857,13 +1856,14 @@ td {
 
 .progress {
   margin-bottom: -5px;
-  border: 3px solid black;
+  border: 3px solid white;
   border-radius: 5px;
   width: 90px;
+  background-color: #FF6865;
 }
 
 .progress > p {
-  margin-bottom: 1px;
+  margin-bottom: 0.1px;
   margin-left: 2px;
   margin-top: -0.5px;
 }
