--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1765,13 +1765,12 @@ td {
 
 .liquid-oxa-subtitle {
   background: #98B9D0;
-  font-size: 40px;
+  font-size: 25px;
   color: black;
   margin: 10px;
   border-radius: 10px;
   text-align: center;
   text-wrap: wrap;
-  height: 80px;
   padding: 10px;
 }
 
@@ -1788,6 +1787,11 @@ td {
   cursor: pointer;
   text-wrap: wrap;
   margin: 5px;
+  width: 96% !important;
+}
+
+.livecoinwatch-widget-1 {
+  width: 200px !important;
 }
 
 .react-trello-card-header {
