--- a/styles/globals.css
+++ b/styles/globals.css
@@ -471,10 +471,6 @@ input[type="number"] {
   color: var(--accent-contrast);
 }
 
-#page-autpage {
-  height: 1000px !important;
-}
-
 .page.active {
   display: block;
   width: calc(100% - 100px);
@@ -1774,8 +1770,46 @@ td {
   padding: 10px;
 }
 
-.smooth-dnd-container.horizontal {
-  height: 75vh;
+.board-data-container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-y: hidden;
+}
+
+.board-container { 
+  overflow-y: hidden;
+  overflow-x: scroll;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 20px;
+  background-color: rgba(32, 34, 50, 0.55);
+}
+
+.bond-data {
+  overflow-y: hidden;
+}
+
+.react-trello-board {
+  height: 70vh !important;
+}
+
+.smooth-dnd-container.vertical {
+  overflow-y: auto !important;
+  height: fit-content;
+}
+
+@media only screen and (max-height: 800px) {
+  .react-trello-board {
+    overflow-y: scroll !important;
+    height: 50vh !important;
+  }
+
+  .bond-data,
+  .bond-container {
+    overflow-y: auto;
+  }
 }
 
 .react-trello-lane {
