worked on kanban board

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1760,7 +1760,7 @@ td {
 }
 
 .liquid-oxa-subtitle {
-  background: #98B9D0;
+  background: #CBC7FC;
   font-size: 25px;
   color: black;
   margin: 10px;
