--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1755,7 +1755,7 @@ td {
   border-radius: 10px;
   text-align: center;
   text-wrap: wrap;
-  height: 170px;
+  height: 150px;
   padding: 10px;
 }
 
@@ -1845,7 +1845,7 @@ td {
 }
 
 .react-trello-card-title {
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   margin: 0;
   padding: 0;
@@ -1854,6 +1854,7 @@ td {
   max-width: 65%;
   width: 65%;
   text-wrap: break-word;
+  color: rgb(43, 43, 43);
 }
 
 .react-trello-card-label {
@@ -1867,7 +1868,7 @@ td {
 
 .react-trello-card-body {
   font-size: 12px;
-  color: black;
+  color: rgb(43, 43, 43);
 }
 
 .lane-image {
@@ -1901,15 +1902,16 @@ td {
 
 .progress {
   margin-bottom: -5px;
+  padding-left: 8px;
   border: 1px solid gray;
-  background-color: white;
+  background: var(--purple-gradient);
+  color: white;
   border-radius: 5px;
-  width: 33%;
+  width: 50%;
   height: 25px;
 }
 
 .leftProgressText {
-  color: rgb(73, 105, 210);
   float: left;
   margin-right: 3px;
   margin-top: -3px;
