--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1904,17 +1904,11 @@ td {
   margin-bottom: -5px;
   padding-left: 8px;
   border: 1px solid gray;
-  background: var(--purple-gradient);
+  background: rgba(31, 42, 71, 0.8);
   color: white;
   border-radius: 5px;
-  width: 50%;
+  width: 40%;
   height: 25px;
-}
-
-.leftProgressText {
-  float: left;
-  margin-right: 3px;
-  margin-top: -3px;
 }
 
 .progress > p {
