--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1759,6 +1759,18 @@ td {
   padding: 10px;
 }
 
+.amount-subtitle {
+  background: #FEC8A7;
+  font-size: 25px;
+  color: black;
+  margin: 10px;
+  margin-top: 25px;
+  border-radius: 10px;
+  text-align: center;
+  text-wrap: wrap;
+  padding: 10px;
+}
+
 .liquid-oxa-subtitle {
   background: #98B9D0;
   font-size: 25px;
