Co-authored-by: Shashvath-S <Shashvath-S@users.noreply.github.com> Co-authored-by: permeg <permeg@users.noreply.github.com> Co-authored-by: Edmund Chang <Firouzja@users.noreply.github.com>
Signed-off-by: EliteCoder21 <emailaaryan@protonmail.com>

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1798,6 +1798,14 @@ td {
   background-color: rgba(32, 34, 50, 0.55);
 }
 
+.smooth-dnd-container {
+  overflow-y: auto !important;
+}
+
+.smooth-dnd-container.vertical {
+  overflow-y: auto !important;
+}
+
 @media only screen and (max-height: 800px) {
   .bond-data,
   .bond-container {
@@ -1806,25 +1814,8 @@ td {
 }
 
 .react-trello-board {
-  overflow-y: auto !important;
+  overflow-y: visible !important;
   overflow-x: scroll !important;
-  height: fit-content !important;
-  min-height: 200vh !important;
-}
-
-.react-trello-board div:first-child,
-.smooth-dnd-container.horizontal {
-  height: fit-content !important;
-}
-
-.smooth-dnd-container {
-  overflow-y: auto !important;
-  height: fit-content !important;
-}
-
-.smooth-dnd-container.vertical {
-  overflow-y: auto !important;
-  height: fit-content !important;
 }
 
 .react-trello-lane {
